--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,12 @@ services:
       - ./mysql-connector-j-8.3.0.jar:/opt/bitnami/spark/jars/mysql-connector-j-8.3.0.jar
       - ./iceberg-spark-runtime-3.5_2.12-1.4.3.jar:/opt/bitnami/spark/jars/iceberg-spark-runtime-3.5_2.12-1.4.3.jar
       - ./nessie-spark-extensions-3.5_2.12-0.76.3.jar:/opt/bitnami/spark/jars/nessie-spark-extensions-3.5_2.12-0.76.3.jar
+      - ./kafka-clients-3.6.1.jar:/opt/bitnami/spark/jars/kafka-clients-3.6.1.jar
+      - ./spark-sql-kafka-0-10_2.12-3.5.0.jar:/opt/bitnami/spark/jars/spark-sql-kafka-0-10_2.12-3.5.0.jar
+      - ./spark-streaming-kafka-0-10-assembly_2.12-3.5.0.jar:/opt/bitnami/spark/jars/spark-streaming-kafka-0-10-assembly_2.12-3.5.0.jar
+      - ./commons-pool2-2.12.0.jar:/opt/bitnami/spark/jars/commons-pool2-2.12.0.jar
       - ./spark-test.py:/opt/bitnami/spark/spark-test.py
+      - ./spark-streaming-test.py:/opt/bitnami/spark/spark-streaming-test.py
   spark-worker:
     image: bitnami/spark:latest
     command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
@@ -143,6 +148,87 @@ services:
       DREMIO_MAX_DIRECT_MEMORY_SIZE_MB: 4096
       #user: admin
       #pass: Tavi@102743
+  #RedPanda
+  redpanda:
+    image: redpandadata/redpanda
+    command:
+      - redpanda
+      - start
+      - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
+      - --advertise-kafka-addr internal://redpanda:9092,external://localhost:19092
+      - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
+      - --advertise-pandaproxy-addr internal://redpanda:8082,external://localhost:18082
+      - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
+      - --rpc-addr redpanda:33145
+      - --advertise-rpc-addr redpanda:33145
+      - --smp 1
+      - --memory 1G
+      - --mode dev-container
+      - --default-log-level=debug
+    volumes:
+      - redpanda-data:/var/lib/redpanda
+      - redpanda-data:/var/lib/redpanda/data
+    ports:
+      - "18081:18081"
+      - "18082:18082"
+      - "19092:19092"
+      - "19644:9644"
+  redpanda-console:
+    image: docker.redpanda.com/vectorized/console:v2.2.3
+    entrypoint: /bin/sh
+    command: -c 'echo "$$CONSOLE_CONFIG_FILE" > /tmp/config.yml; /app/console'
+    environment:
+      CONFIG_FILEPATH: /tmp/config.yml
+      CONSOLE_CONFIG_FILE: |
+        kafka:
+          brokers: ["redpanda:9092"]
+          schemaRegistry:
+            enabled: true
+            urls: ["http://redpanda:8081"]
+        redpanda:
+          adminApi:
+            enabled: true
+            urls: ["http://redpanda:9644"]
+    ports:
+      - "8084:8080"
+    depends_on:
+      - redpanda
+  #Debezium for cdc
+  debezium:
+    image: debezium/connect
+    ports:
+      - '8083:8083'
+    environment:
+      BOOTSTRAP_SERVERS: "redpanda:9092"
+      REST_ADVERTISED_HOST_NAME: kafka-connect-rest
+      GROUP_ID: "mysql-deb-kc-rp"
+      CONFIG_STORAGE_TOPIC: "redpanda.configs"
+      OFFSET_STORAGE_TOPIC: "redpanda.offset"
+      STATUS_STORAGE_TOPIC: "redpanda.status"
+      CONFIG_STORAGE_REPLICATION_FACTOR: "1"
+      OFFSET_STORAGE_REPLICATION_FACTOR: "1"
+      STATUS_STORAGE_REPLICATION_FACTOR: "1"
+      PLUGIN_PATH: /data/connect-jars
+      # KEY_CONVERTER: org.apache.kafka.connect.storage.StringConverter
+      # VALUE_CONVERTER: org.apache.kafka.connect.storage.StringConverter
+      # KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://redpanda:8081
+      # VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://redpanda:8081
+    volumes:
+      - debezium-data:/data/connect-jars
+      - debezium-data:/kafka/config
+      - debezium-data:/kafka/data
+      - debezium-data:/kafka/logs
+    depends_on:
+      - redpanda
+      - mysql
+  debezium-ui:
+    image: debezium/debezium-ui
+    ports:
+      - '8085:8080'
+    environment:
+      KAFKA_CONNECT_URIS: http://debezium:8083
+    depends_on:
+      - debezium
 volumes:
   mysql-db:
   minio-db:
@@ -150,3 +236,5 @@ volumes:
   mongodb-config:
   postgre-db:
   dremio-data:
+  redpanda-data:
+  debezium-data:
